--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -20,6 +20,8 @@ $primary:       $indigo-dark ;
 $secondary:     $blue;
 
 //accordion override
+$accordion-padding-y:                     1.5rem;
+$accordion-padding-x:                     1.5rem;
 $accordion-icon-color:                    $primary;
 $accordion-icon-active-color:             $secondary;
 $accordion-icon-width:                    1.875rem ;
