--- a/scss/components/_mixins.scss
+++ b/scss/components/_mixins.scss
@@ -11,3 +11,9 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+//transition
+@mixin transitionproperty{
+    transition-duration: 1000ms;
+    transition-property: all;
+}
