--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -3,6 +3,7 @@
 $indigo-dark:  #6610f2 !default;
 $indigo-light:  hsl(263, 85%, 58%) !default;
 $blue:    #0d6efd !default;
+$footer: #151414; 
 // white and gray colors
 $white:    #fff ;
 $gray-100: #f8f9fa ;
